--- a/build.xml
+++ b/build.xml
@@ -44,18 +44,26 @@
       </exec>
     </target>
 
-    <property environment="env"/>
-    <property name="scala.home" value="${env.SCALA_HOME}"/>
-    <property name="antlr.home" value="${env.ANTLR_HOME}"/>
-
+    <property environment="_env"/>
+    <property name="_scala.home" value="${env.SCALA_HOME}"/>
+    <property name="_antlr.home" value="${env.ANTLR_HOME}"/>
+    <property name="_scala.compiler" value="${env.SCALAC_CLASSPATH}"/>
+	<property name="_scala.library" value="${env.SCALALIB_CLASSPATH}"/>
+	<property name="_scala.reflect" value="${env.SCALAREFLECT_CLASSPATH}"/>
+	
     <target name="init" depends="generate-versioninfo">
-      <taskdef resource="scala/tools/ant/antlib.xml">
-        <classpath>
-          <pathelement location="${scala.home}/lib/scala-compiler.jar"   />
-          <pathelement location="${scala.home}/lib/scala-library.jar"   />
-          <pathelement location="${scala.home}/lib/scala-reflect.jar"   />
-        </classpath>
-      </taskdef>
+		<property name="scala-library.jar" value="${scala.home}/lib/scala-library.jar" />
+		<path id="build.classpath">
+			<pathelement location="${scala-library.jar}"   />
+			<!--<pathelement location="${your.path}"   />-->
+			<pathelement location="${build.dir}"   />
+		</path>
+		<taskdef resource="scala/tools/ant/antlib.xml">
+			<classpath>
+			<pathelement location="${scala.home}/lib/scala-compiler.jar"   />
+			<pathelement location="${scala-library.jar}"   />
+			</classpath>
+		</taskdef>
       <mkdir dir="${parser-loc}"/>
       <mkdir dir="${bin}"/>
       <mkdir dir="${lib-bin}"/>
