At least it compiles

--- a/Makefile.in
+++ b/Makefile.in
@@ -37,21 +37,18 @@ ANT=@ANT@
 abs_srcdir=@abs_srcdir@
 SCALAC_CLASSPATH=@SCALAC_CLASSPATH@
 SCALALIB_CLASSPATH=@SCALALIB_CLASSPATH@
+SCALAREFLECT_CLASSPATH=@SCALAREFLECT_CLASSPATH@
 ANTLR3_CLASSPATH=@ANTLR3_CLASSPATH@
 ANT_ANTLR3_CLASSPATH=@ANT_ANTLR3_CLASSPATH@
-
-export CLASSPATH:=@CLASSPATH@:${ANTLR3_CLASSPATH}:${ANT_ANTLR3_CLASSPATH}
-#CLASSPATH_ENV = CLASSPATH=${CLASSPATH}:${SCALA_CLASSPATH}:${SCALALIB_CLASSPATH}:${SCALAREFLECT_CLASSPATH}
+export CLASSPATH:=@CLASSPATH@:${SCALAC_CLASSPATH}${SCALALIB_CLASSPATH}${SCALAREFLECT_CLASSPATH}${ANTLR3_CLASSPATH}${ANT_ANTLR3_CLASSPATH}
 
 
 all: ${ALL}
 
 linker:
-	echo ${CLASSPATH}
 	${ANT} -f ${abs_srcdir}/build.xml -Dname=linker -Dgrammar=pencil dist
 
 optimizer:
-	echo ${CLASSPATH}
 	${ANT} -f ${abs_srcdir}/build.xml -Dname=optimizer -Dgrammar=pencil dist
 
 check:${ALL:%=%-check}
