--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,13 @@
-gen
-bin
-linker.jar
-optimizer.jar
-/linker
-/optimizer
-autom4te.cache
-config.log
-config.status
-configure
-/Makefile
-*.deb
-*.rpm
-/pencil-linker
-/pencil-optimizer
-/work
-/pencil.jar
-/docs
+# autoconf and automake
+/autom4te.cache
+/aclocal.m4
+/compile
+/configure
+/depcomp
+/install-sh
+/missing
+/stamp-h1
+/build-aux/
+Makefile.in
 *.sum
 *.log
