--- a/Makefile.in
+++ b/Makefile.in
@@ -23,11 +23,7 @@ ALL=optimizer linker
 DOXYGEN=doxygen
 SCALADOC=scaladoc
 
-export SCALA_HOME=@SCALA_HOME@
-export ANTLR_HOME=@ANTLR_HOME@
-export ANT_ANTLR_HOME=@ANT_ANTLR_HOME@
 export FILE_CHECK_TOOL=@FILE_CHECK_TOOL@
-#export CLASSPATH=${ANT_ANTLR_HOME}/ant-antlr3.jar:${ANTLR_HOME}/antlr3.jar
 export G_PREFIX=${PREFIX}/@prefix@
 
 JAR_ROOT=${G_PREFIX}/share/pencil
@@ -47,10 +43,10 @@ export CLASSPATH:=@CLASSPATH@:${SCALAC_CLASSPATH}${SCALALIB_CLASSPATH}${SCALAREF
 all: ${ALL}
 
 linker:
-	${ANT} -f ${abs_srcdir}/build.xml "-Dbuilddir=${abs_builddir}" -Dname=linker -Dgrammar=pencil dist
+	${ANT} -f "${abs_srcdir}/build.xml" "-Dbuilddir=${abs_builddir}" -Dname=linker -Dgrammar=pencil dist
 
 optimizer:
-	${ANT} -f ${abs_srcdir}/build.xml "-Dbuilddir=${abs_builddir}" -Dname=optimizer -Dgrammar=pencil dist
+	${ANT} -f "${abs_srcdir}/build.xml" "-Dbuilddir=${abs_builddir}" -Dname=optimizer -Dgrammar=pencil dist
 
 check:${ALL:%=%-check}
 
@@ -66,10 +62,10 @@ clean:${ALL:%=%-clean} docs-clean packages-clean
 	echo ${CLEAN}
 
 linker-clean:
-	${ANT} -f ${abs_srcdir}/build.xml -Dname=linker -Dgrammar=pencil clean
+	${ANT} -f "${abs_srcdir}/build.xml" "-Dbuilddir=${abs_builddir}" -Dname=linker -Dgrammar=pencil clean
 
 optimizer-clean:
-	${ANT} -f ${abs_srcdir}/build.xml -Dname=optimizer -Dgrammar=pencil clean
+	${ANT} -f "${abs_srcdir}/build.xml" "-Dbuilddir=${abs_builddir}" -Dname=optimizer -Dgrammar=pencil clean
 
 distclean: clean
 	rm -f config.status config.log optimizer linker Makefile
