--- a/build.xml
+++ b/build.xml
@@ -25,14 +25,14 @@
     <property name="builddir" location="."/>
     <property name="src" location="src"/>
     <property name="res" location="res"/>
-    <property name="gen"  location="${builddir}/gen"/>
-    <property name="bin"  location="${builddir}/bin/${name}"/>
-    <property name="lib-name"  location="pencil"/>
-    <property name="lib-bin"  location="${builddir}/bin/${lib-name}"/>
-    <property name="grammar"  value="${name}"/>
+    <property name="gen" location="${builddir}/gen"/>
+    <property name="bin" location="${builddir}/bin/${name}"/>
+    <property name="lib-name" location="${builddir}/pencil"/>
+    <property name="lib-bin" location="${builddir}/bin/${lib-name}"/>
+    <property name="grammar" value="${name}"/>
     <property name="antlr-grammar" location="grammar/${grammar}.g"/>
 
-    <property name="parser-loc"  location="${gen}/java/com/arm/carp/${grammar}/parser"/>
+    <property name="parser-loc" location="${gen}/java/com/arm/carp/${grammar}/parser"/>
 
     <property name="versioninfo-scala-loc" location="${gen}/scala/com/arm/carp/apps"/>
 
@@ -77,7 +77,7 @@
         destdir="${bin}">
         <classpath>
           <pathelement location="${bin}"/>
-          <pathelement location="${builddir}/${lib-name}.jar"/>
+          <pathelement location="${lib-name}.jar"/>
         </classpath>
         <src>
           <pathelement path="${src}/scala/com/arm/carp/apps/${name}/"/>
@@ -100,7 +100,7 @@
 
     <target name="dist-lib" depends="compile-lib">
       <jar
-        destfile="${builddir}/${lib-name}.jar"
+        destfile="${lib-name}.jar"
         basedir="${lib-bin}">
       </jar>
     </target>
