--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "pencil-util"]
 	path = pencil-util
-	url = http://github.com/carpproject/pencil-util
+	url = https://github.com/Meinersbur/pencil-util.git
