--- a/Makefile.am
+++ b/Makefile.am
@@ -99,25 +99,14 @@ check: check-optimizer check-linker
 
 .PHONY: check-optimizer check-linker
 
-testsuite:
-	mkdir -p "${abs_builddir}/testsuite"
-
-testsuite/code: testsuite
-	mkdir -p "${abs_builddir}/testsuite/code"
-	
 testsuite/code/pencil_pre.h: Makefile testsuite/code
+	mkdir -p "${abs_builddir}/testsuite/code"
 	echo "#include <pencil.h>" | cpp -P -D__PENCIL__ @PENCIL_UTIL_CPPARGS@ > $@
 
-testsuite/code/pencil_post.h: Makefile testsuite/code
-	if test "x@PENCIL_UTIL_SRCDIR@"="x"; then                              \
-		echo "#include <@PENCIL_UTIL_SRCDIR@/include/pencil.h>" > $@;  \
-	else                                                                   \
-		echo "#include <pencil.h>" > $@;                               \
-	fi; 
+check-optimizer: testsuite/code/pencil_pre.h optimizer
+	mkdir -p "${abs_builddir}/testsuite/code/pencil/simple"
+	runtest --tool optimizer --srdir "${abs_srcdir}/testsuite" --objdir "${abs_builddir}/testsuite" --outdir "${abs_builddir}" --debug
 
-check-optimizer: testsuite testsuite/code/pencil_pre.h testsuite testsuite/code/pencil_post.h optimizer
-	runtest --tool optimizer --srdir "${abs_srcdir}/testsuite" --objdir "${abs_builddir}/testsuite" --outdir "${abs_builddir}"
-
-check-linker: testsuite testsuite/code/pencil_pre.h testsuite testsuite/code/pencil_post.h linker
-	runtest --tool linker --srdir "${abs_srcdir}/testsuite" --objdir "${abs_builddir}/testsuite" --outdir "${abs_builddir}"
-	
+check-linker: testsuite/code/pencil_pre.h linker
+	mkdir -p "${abs_builddir}/testsuite/code/pencil/simple"
+	runtest --tool linker --srdir "${abs_srcdir}/testsuite" --objdir "${abs_builddir}/testsuite" --outdir "${abs_builddir}" --debug
