Cleanup: Spelling mistake and updating .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@
 /optimizer.sum
 /testsuite/code/pencil_pre.h
 /testsuite/code/pencil_post.h
+/testsuite/code/carp-common.h
+
+# make dist
+/*.tar.gz
 
 # make packages
 /work/
