Samller fixes for making 'make distcheck' work

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,7 +11,7 @@ ACLOCAL_AMFLAGS = -I m4
 #srcdir = ${abs_srcdir}
 
 ALL=optimizer linker
-#SUBDIRS = testsuite
+SUBDIRS = @PENCIL_UTIL_SUBDIR@
 DOCS = pencil optimizations
 
 SCALADOC=@SCALADOC@
@@ -35,7 +35,7 @@ export CLASSPATH:=@CLASSPATH@:${SCALAC_CLASSPATH}${SCALALIB_CLASSPATH}${SCALAREF
 CLEANFILES = dbg.log linker.log linker.sum optimizer.log optimizer.sum \
  testsuite/code/pencil_pre.h testsuite/code/pencil_post.h
 
-EXTRA_DIST = README.txt LICENSE.txt src res example build.xml autogen.sh create-packages.sh testsuite
+EXTRA_DIST = README.txt LICENSE.txt src res example build.xml autogen.sh create-packages.sh testsuite grammar/pencil.g etc/README example/Example.scala Makefile README.txt
 
 
 
